# remote

./: .gitignore  flake.nix  main.cxx  makefile  notes.txt  readme  recorder.cxx
inc/: recorder.hxx
nixos-pi-zero-2/: flake.nix  secrets.nix  zero2w.nix
pointer/: main.cxx
voice/: CMakeLists.txt  flake.nix  main.cxx  makefile  recorder.cxx  remote  udpSender.cxx
voice/inc/: common.hxx  gpioListener.hxx  packet.hxx  recorder.hxx  threadSafeQueue.hxx  tsq.hxx  udpSender.hxx
voice/src/: gpioListener.cxx  main.cxx  recorder.cxx  udpSender.cxx
